--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 .App {
+  display: flex;
+  flex-direction: column;
+}
+
+.App-header {
   text-align: center;
 }
 
@@ -7,13 +12,21 @@
   pointer-events: none;
 }
 
+.card {
+  width: 70%;
+  margin: 0 auto;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,7 +35,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
